# Notion_RAG_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  cli.py  config.py  extensions.py  models.py  security.py
backend/evals/: answers.py  generator.py  goldset.py  metrics.py  retrieval.py  runs.py
backend/rag/: __init__.py  answerer.py  bm25.py  fusion.py  grader.py  ingestion.py  notion.py  pipeline.py  prompts.py  reranker.py  retrieval_config.py  rewriter.py  sync.py
backend/rag/connectors/: __init__.py  base.py  notion.py  obsidian.py
backend/routes/: __init__.py  analytics.py  auth.py  chat.py  documents.py
docs/: architecture.md
evals/: README.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthProvider.tsx  ChatPanel.tsx  Dashboard.tsx  Layout.tsx  MessageBubble.tsx  ProtectedRoute.tsx  SourceList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  UploadPage.tsx
frontend/src/styles/: global.css
rag/: answerer.py  app.py  app_ui.py  db_handler.py  embedding.py  generate_prompt.py  grade_prompt.py  grader.py  improve_prompt.py  main.py  notion_ingest.py  pages_id.txt  prompts.py  rag.ipynb  rag.py  rag_interface.py  retriever.py  retriever_tool.py  rewrite_prompt.py  test.py  to_do.txt
rag/rag_pipeline/: prompts.py  retriever.py  rewriter.py
rag/templates/: index.html  test.html
tests/: conftest.py  test_auth.py  test_chunking.py  test_documents.py  test_eval_answers.py  test_eval_metrics.py  test_eval_report.py  test_eval_retrieval.py  test_fusion.py  test_goldset.py  test_hybrid.py  test_obsidian_connector.py  test_obsidian_sync.py  test_pipeline.py  test_pipeline_lazy.py  test_rerank.py  test_rewrite_policy.py  test_stream_route.py  test_user_isolation.py
tests/fixtures/vault/: Journal.md  Liens.md  Projet X.md  Schéma.md
tests/fixtures/vault/.trash/: Vieille note.md
tests/fixtures/vault/Recettes/: Tarte aux pommes.md
