[project]
name = "notion-rag-chatbot"
version = "0.1.0"
description = "RAG chatbot over personal notes and documents (Flask backend + React frontend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-jwt-extended>=4.6",
    "flask-limiter>=3.6",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "notion-client>=2.0",
    "pypdf>=5.0",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "requests>=2.32",
    "werkzeug>=3.0",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = false
