[project]
name = "notion-rag-chatbot"
version = "0.1.0"
description = "RAG chatbot over personal notes and documents (Flask backend + React frontend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-jwt-extended>=4.6",
    "flask-limiter>=3.6",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "notion-client>=2.0",
    "pypdf>=5.0",
    "pydantic>=2.6",
    "requests>=2.32",
    "werkzeug>=3.0",
    "gunicorn>=22.0",
    "python-frontmatter>=1.1",
    "rank-bm25>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # DeterministicFakeEmbedding used in tests produces unnormalized scores
    "ignore:Relevance scores must be between 0 and 1:UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
